# SLOG

./: CMakeLists.txt  Makefile  README.md  conanfile.py
include/: slogger.h
src/: AiLogger.cpp  AiLogger.h  CMakeLists.txt  header.h  slogger.cpp  slogger.h
test/: CMakeLists.txt  step1.cpp  test.cpp
